# django1-basic

./: CNAME  README.md  manage.py  pyproject.toml
core/: urls.py  views.py
core/migrations/: 0001_initial.py  0002_cliente.py
core/static/css/: estilos.css
core/templates/: 404.html  500.html  index.html  permissions.html  produto.html
django1/: settings.py
