[tool.poetry]
name = "django1-basic"
version = "0.1.0"
description = ""
authors = ["davilos <daviloscostagg@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django1_basic"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
